* batch.haltspp now supports 2 parameters too in order to have separate halt conditions for eye and light tracing
* Added the support for camera not uniform and anamorphic bokeh (issue #409)
* Added the support for camera bokeh with custom distribution
* Variance clamping is now applied separately to each radiance group (issue #414)
* Added the support for lateral and longitudinal chromatic aberration (issue #409)
* Added the support for SINC pixel filter (issue #415)
* Added the support for CATMULLROM pixel filter (issue #415)
* It is now possible to disable Optix (with property context.cuda.optix.enable) even if it is detected and available
* Any mesh UV map can now be used for displacement (issue #416)

### Fixed Bugs

* Added the support for pixel filtering to light tracing (issue #413)
* Now LuxCore will work even if OpenCL is available but not a valid OpenCL ICD platform has been found (issue #422)

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

### Known Problems and limitations

* accelerator.bvh.builder.type = EMBREE_MORTON doesn't work with the latest Embree
* Python crashes when calling sys.exit()
* TILEPATHOCL (and RTPATHOCL) count the layers of transparent surfaces as an iteration of the rendering finite state machine so they require to increase the max. path depth to avoid black regions.
* Light emitted by motion blurred triangle lights is approximated using the triangle area of time 0.0 (computing triangle area at runtime would be expansive) so it may be not totally accurate if the motion blur transformation include a scale.
* Variance clamping is not applied to AOVs

**Note for Windows users:** you have to install the [Microsoft Visual C++ Redistributable
for Visual Studio 2017](https://aka.ms/vs/15/release/vc_redist.x64.exe) and
[Intel C++ redistributable](https://software.intel.com/sites/default/files/managed/59/aa/ww_icl_redist_msi_2018.3.210.zip).